@@ -16,6 +16,7 @@
 ** of this file.
 **
 ****************************************************************************/
+
 #include "mcompositornotificationsink.h"
 #include "notificationwidgetparameterfactory.h"
 #include <MSceneManager>
@@ -25,6 +26,7 @@
 #include <QTimer>
 #include <QX11Info>
 #include "x11wrapper.h"
+#include "mdeviceprofile.h"
 
 #undef Bool
 
@@ -36,6 +38,9 @@ MCompositorNotificationSink::MCompositorNotificationSink() :
         window(NULL),
         currentBanner(NULL),
         touchScreenLockActive(false)
+#ifdef HAVE_CONTEXTSUBSCRIBER
+        , currentWindowAngleProperty(new ContextProperty("/Screen/CurrentWindow/OrientationAngle"))
+#endif
 {
     notificationPreviewMode = new MGConfItem(NOTIFICATION_PREVIEW_ENABLED, this);
     changeNotificationPreviewMode();
@@ -58,6 +63,10 @@ MCompositorNotificationSink::~MCompositorNotificationSink()
         delete banner;
     }
     delete window;
+
+#ifdef HAVE_CONTEXTSUBSCRIBER
+    delete currentWindowAngleProperty;
+#endif
 }
 
 void MCompositorNotificationSink::createWindowIfNecessary()
@@ -71,11 +80,11 @@ void MCompositorNotificationSink::createWindowIfNecessary()
         window->setAttribute(Qt::WA_X11NetWmWindowTypeNotification);
         window->setObjectName("MCompositorNotificationSinkWindow");
         window->setWindowTitle("Notification");
-        window->setProperty("followsCurrentApplicationWindowOrientation", true);
+        window->setOrientationLocked(true);
 
-        // Clear the mask for the duration of orientation change, because the mask is not rotated along with the notification
-        connect(window->sceneManager(), SIGNAL(orientationAboutToChange(M::Orientation)), this, SLOT(clearWindowMask()));
-        connect(window->sceneManager(), SIGNAL(orientationChangeFinished(M::Orientation)), this, SLOT(updateWindowMask()));
+#ifdef HAVE_CONTEXTSUBSCRIBER
+        connect(currentWindowAngleProperty, SIGNAL(valueChanged()), this, SLOT(updateWindowOrientationIfWindowHidden()));
+#endif
         connect(window, SIGNAL(displayEntered()), this, SLOT(addOldestBannerToWindow()));
     }
 }
@@ -214,18 +223,53 @@ void MCompositorNotificationSink::addOldestBannerToWindow()
         if (!bannerQueue.isEmpty()) {
             // The oldest banner should be shown
             currentBanner = bannerQueue.takeFirst();
+            updateWindowOrientation();
+
             if (window != NULL) {
                 window->sceneManager()->appearSceneWindow(currentBanner, MSceneWindow::DestroyWhenDone);
             }
             bannerTimer.start(currentBanner->property("timeout").toInt());
-            updateWindowMask(currentBanner);
+            updateWindowMask();
         } else {
             // No more banners exist to be shown -> hide the window
             if (window != NULL) {
+                // When window is hidden check whether orientation was been changed during last preview banner
+                updateWindowOrientation();
                 window->hide();
             }
         }
     }
+}
+
+void MCompositorNotificationSink::updateWindowOrientationIfWindowHidden()
+{
+    if (window != NULL && !window->isVisible()) {
+        updateWindowOrientation();
+    }
+}
+
+void MCompositorNotificationSink::updateWindowOrientation()
+{
+#ifdef HAVE_CONTEXTSUBSCRIBER
+    if (window == NULL) {
+        return;
+    }
+    QVariant currentWindowAngleVariant = currentWindowAngleProperty->value();
+    if (currentWindowAngleVariant.isNull() || !currentWindowAngleVariant.isValid()) {
+        return;
+    }
+    M::OrientationAngle angle = static_cast<M::OrientationAngle>(currentWindowAngleVariant.toInt());
+    M::Orientation topmostAppOrientation = MDeviceProfile::instance()->orientationFromAngle(angle);
+    if (topmostAppOrientation != window->orientation()) {
+        window->sceneManager()->setOrientationAngle(angle, MSceneManager::ImmediateTransition);
+        if (topmostAppOrientation == M::Portrait) {
+            window->setPortraitOrientation();
+        } else {
+            window->setLandscapeOrientation();
+        }
+        updateWindowMask();
+    }
+#endif
 }
 
 void MCompositorNotificationSink::setApplicationEventsDisabled(bool disabled)
@@ -243,6 +287,7 @@ void MCompositorNotificationSink::updateWindowMask()
 void MCompositorNotificationSink::updateWindowMask(MBanner* banner)
 {
     if (window != NULL) {
+        window->clearMask();
         QSize size = banner->preferredSize().toSize();
         QPoint origin;
 
@@ -266,13 +311,6 @@ void MCompositorNotificationSink::updateWindowMask(MBanner* banner)
             break;
         }
         window->setMask(QRegion(QRect(origin, size), QRegion::Rectangle));
-    }
-}
-
-void MCompositorNotificationSink::clearWindowMask()
-{
-    if (window != NULL) {
-        window->clearMask();
     }
 }
 
